--- a/gb/1/1/18/n36360.md
+++ b/gb/1/1/18/n36360.md
@@ -14,59 +14,60 @@
 <p>凭第一张唱片预购量便取得金唱片佳绩，尚未开口演唱已成为年轻少女心目中最喜爱的男歌手，陈冠希踏入歌坛的遭遇，与黎明当年的情况类似。更巧的是，在获得许多女孩欢心的同时，他们也被不少人所讨厌，因为觉得他们只靠外表，欠缺实力，所幸现年２０岁的陈冠希还年轻，可以加倍努力，不断磨练。一般认为他最像黎明之处，是拥有一双电眼，眼神最迷人。</p>
 <p><strong>谢霆锋</strong> （见图）</p>
 <p>郭富城舞功最棒，谢霆锋在舞台上的表现同样出色，不论唱快歌或慢歌，都非常有型。虽然初期有人怀疑霆锋的实力，但如今时间已证明，他是“有料”的。很多人发现，霆锋和城城皆爱戴太阳眼镜，也经常穿背心展示结实的肌肉，其实两人的身型挺相似呢。</p>
-<p>&nbsp;</p>
-<hr />
-<p><b><span style="color: red;">相关文章</span></b></p>
+<p>?</p>
+<p><b><span style="color: red">相关文章</span></b></p>
 <ul>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36330" target="_blank" rel="noopener noreferrer">菲戈暗示对英超有兴趣</a> (1/18/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36319" target="_blank" rel="noopener noreferrer">eranews中国新年节目　推出古典音乐会 </a> (1/18/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=36041" target="_blank" rel="noopener noreferrer">张学友、王菲勇夺杰出男女歌手大奖 </a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35955" target="_blank" rel="noopener noreferrer">内地港台歌手首次大比赛</a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35762" target="_blank" rel="noopener noreferrer">苹果新推出的音乐制作软件iTunes一周下载27.5万次</a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=35750" target="_blank" rel="noopener noreferrer">过中国新年: 换个手机铃声吉祥call </a> (1/17/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34962" target="_blank" rel="noopener noreferrer">综述：香港年度十大劲歌金曲奖揭晓</a> (1/15/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34720" target="_blank" rel="noopener noreferrer">马友友丝路之旅将在两岸首演谭盾的卧虎藏龙 </a> (1/15/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34537" target="_blank" rel="noopener noreferrer">孙燕姿：新人圈中最抢眼（图文）</a> (1/15/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34531" target="_blank" rel="noopener noreferrer">许茹芸花开不败誓死捍卫天后宝座（图文） </a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34530" target="_blank" rel="noopener noreferrer">林忆莲想和陶?磁龀龌鸹?（图文）</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34518" target="_blank" rel="noopener noreferrer">百老汇音乐剧之夜亮相京城（图文）</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34519" target="_blank" rel="noopener noreferrer">郭富城陈慧琳夺最受欢迎男女歌星</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34473" target="_blank" rel="noopener noreferrer">全球华语音乐榜评选活动揭晓</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34414" target="_blank" rel="noopener noreferrer">华语乐坛新人巡礼：“偶像派”天生丽质难自弃</a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34411" target="_blank" rel="noopener noreferrer">孙燕姿：新人圈中最抢眼 </a> (1/14/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=34014" target="_blank" rel="noopener noreferrer">古典音乐巨星 照亮黯淡景气</a> (1/13/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=33681" target="_blank" rel="noopener noreferrer">宫泽理惠又自杀一说遭否认</a> (1/12/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=33542" target="_blank" rel="noopener noreferrer">数字钢琴在青岛音乐广场亮相 </a> (1/12/2001)</li>
-<li><a class="ltnn" href="http://epochtimes.com/news/epochnews/newscontent.asp?ID=33493" target="_blank" rel="noopener noreferrer">MP3.com要求澄清版权定义 </a> (1/12/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36330" target="_blank" rel="noopener noreferrer nofollow">菲戈暗示对英超有兴趣</a> (1/18/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36319" target="_blank" rel="noopener noreferrer nofollow">eranews中国新年节目　推出古典音乐会 </a> (1/18/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=36041" target="_blank" rel="noopener noreferrer nofollow">张学友、王菲勇夺杰出男女歌手大奖 </a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35955" target="_blank" rel="noopener noreferrer nofollow">内地港台歌手首次大比赛</a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35762" target="_blank" rel="noopener noreferrer nofollow">苹果新推出的音乐制作软件iTunes一周下载27.5万次</a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=35750" target="_blank" rel="noopener noreferrer nofollow">过中国新年: 换个手机铃声吉祥call </a> (1/17/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34962" target="_blank" rel="noopener noreferrer nofollow">综述：香港年度十大劲歌金曲奖揭晓</a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34720" target="_blank" rel="noopener noreferrer nofollow">马友友丝路之旅将在两岸首演谭盾的卧虎藏龙 </a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34537" target="_blank" rel="noopener noreferrer nofollow">孙燕姿：新人圈中最抢眼（图文）</a> (1/15/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34531" target="_blank" rel="noopener noreferrer nofollow">许茹芸花开不败誓死捍卫天后宝座（图文） </a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34530" target="_blank" rel="noopener noreferrer nofollow">林忆莲想和陶?磁龀龌鸹?（图文）</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34518" target="_blank" rel="noopener noreferrer nofollow">百老汇音乐剧之夜亮相京城（图文）</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34519" target="_blank" rel="noopener noreferrer nofollow">郭富城陈慧琳夺最受欢迎男女歌星</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34473" target="_blank" rel="noopener noreferrer nofollow">全球华语音乐榜评选活动揭晓</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34414" target="_blank" rel="noopener noreferrer nofollow">华语乐坛新人巡礼：“偶像派”天生丽质难自弃</a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34411" target="_blank" rel="noopener noreferrer nofollow">孙燕姿：新人圈中最抢眼 </a> (1/14/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=34014" target="_blank" rel="noopener noreferrer nofollow">古典音乐巨星 照亮黯淡景气</a> (1/13/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=33681" target="_blank" rel="noopener noreferrer nofollow">宫泽理惠又自杀一说遭否认</a> (1/12/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=33542" target="_blank" rel="noopener noreferrer nofollow">数字钢琴在青岛音乐广场亮相 </a> (1/12/2001)</li>
+<li><a class="ltnn" href="https://epochtimes.com/news/epochnews/newscontent.asp?ID=33493" target="_blank" rel="noopener noreferrer nofollow">MP3.com要求澄清版权定义 </a> (1/12/2001)</li>
 </ul>
+<p>
+?</p>
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/12/n33493.md#1">MP3.com要求澄清版权定义</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/12/n33542.md#1">数字钢琴在青岛音乐广场亮相</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/12/n33681.md#1">宫泽理惠又自杀一说遭否认</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/1/1/13/n34014.md#1">古典音乐巨星 照亮黯淡景气</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/4/13/n14481653.md#1">湖北维权人士案件庭审 莫名被增加两项罪名</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/14/n14531122.md#1">要求调查办假案法官 访民被抓 亲属遭株连</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/8/31/n14584722.md#1">湖北访民夫妻被以虚构罪名判入狱 生命垂危</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/22/n14621384.md#1">湖北访民尹登珍狱中病情恶化 家属吁紧急救援</a></li>
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/18/12/11/n10903516.md#1" target="_blank">观雨堂主：一位历史学家在生命终点的“争宠”</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/17/9/12/n9623688.md#1" target="_blank">比利时母亲30年车祸创痛 读转法轮4个月消失</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/21/1/23/n12707407.md#1" target="_blank">闻欣：钱学森为何拒绝反对法轮功？</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/19/1/29/n11010938.md#1" target="_blank">古罗马迫害基督徒与中共迫害法轮功对比</a></li><li><a href="https://github.com/1992513/djy/blob/master/gb/14/12/28/n4328405.md#1" target="_blank">云帆：从台北市长保护法轮功学员谈起</a></li>
 <strong>热门新闻：</strong>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/5/n14545644.md#1">【未解之谜】古墓竹简惊现秦朝真相 我们都被教科书骗了？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/24/8/1/n14302523.md#1">【古道人生】修佛后他足跛眼盲被雷击死 这是佛无灵吗？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/16/1/2/n4608491.md#1">日本煎茶道始祖卖茶翁自许卢仝正流  还俗踏上卖茶修行之路</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/5/30/n14520972.md#1">【古道人生】好心帮人为何死后遭“雷劈”？</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/6/23/n14536779.md#1">夜奔七百里闯敌营 看奇女子如何报恩还业</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548905.md#1">【唐青看时事】美参院出大招 拟中俄“一锅端”</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14549024.md#1">【重播】卢比奥在吉隆坡举行记者会</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548117.md#1">【未解之谜】语出惊人 算尽风云 民国第一神算传奇</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547473.md#1">神韵要求法庭撤销“毫无根据”的诉讼案</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547530.md#1">资不抵债 大陆合资企业广汽菲克宣告破产</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547402.md#1">“0元购”外卖爆单 阿里与美团顶风内卷</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14546820.md#1">陆剧上半年十大最具影响力角色出炉 孙俪称冠</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547512.md#1">汤唯携9岁女儿现身机场 请求网友别拍到小孩</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14548151.md#1">获奖无数为何不想拿这奖 周润发设80岁前目标</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/7/n14546802.md#1">女粉丝带男友看演唱会 鹿晗温暖喊话现场嗨翻</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547527.md#1">王嘉尔自曝曾借巨款给好友 再联系方知被骗</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/9/n14547823.md#1">吃西瓜前加上这一物 就不会变得湿软难吃</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/8/n14547034.md#1">美国114岁女人瑞分享长寿秘诀：吃一种食物</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/10/n14548571.md#1">很多人的休假方式都错了？ 专家这么说</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/4/n14544778.md#1">步行：治疗7种常见病痛的有效方法</a></li>
-<li><a href="https://github.com/1992513/djy/blob/master/gb/25/7/1/n14542664.md#1">心脏与大脑会记下每一个愤怒的时刻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638002.md#1">高人点化孙叔敖：谨记三条铁律，就能获得善终</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/10/4/n14608984.md#1">【古道人生】许多人都知道天诛 不知道地灭是怎回事</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/15/n14636582.md#1">青年建筑师创业靠信任 在纽约筑起台湾的家</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/1/31/n14426731.md#1">【品读唐诗】空山新雨的禅境</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/11/4/25/n3238815.md#1">安贫乐道——《后汉书》中的韦彪与杨震</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640544.md#1">【佳音时刻】胡耀邦纪念会 红二代分裂成焦点</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640558.md#1">【纪元焦点】28点计划出炉 俄乌现和平曙光？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/22/n14640667.md#1">【车评】展现Gazoo精神 2025 Toyota Corolla GR Premium Plus</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639642.md#1">SU7争议继续发酵 小米市值蒸发逾5300亿港元</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638607.md#1">分析：农民工若大规模返贫 或将揭竿而起</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639193.md#1">分析：建立稀土供应链 西方占据两大优势</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639252.md#1">陆女星韩雪打破高冷形象 直播卖12.9元棉拖鞋</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639275.md#1">赵丽颖带儿子出门再被偷拍 工作室紧急发声</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/18/n14638556.md#1">《鬼灭之刃》票房超千亿日圆 创日本影史纪录</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14638997.md#1">《魔法坏女巫2》褒贬不一 烂番茄评价出炉</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639948.md#1">港星郑则仕曝近况 回应身材暴瘦与去世传闻</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/20/n14639533.md#1">为何飞机不直接飞到巡航高度 而是分段爬升？</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/19/n14639278.md#1">想要逆龄？这些抗老好物帮你保养更有效</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640625.md#1">“黑色星期五”年度优惠周11月20日提前开跑</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640269.md#1">心理学家：判断伴侣是否真正契合的两个迹象</a></li>
+<li><a href="https://github.com/1992513/djy/blob/master/gb/25/11/21/n14640311.md#1">喝茶有禁忌？ 美国医生说这样喝会伤身</a></li>
 <strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/1992513/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/1/1/18/n36360.htm">香港出现新世纪“四大天王”</a></p><hr>
 <strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://quickchart.io/qr?size=256&text=https://github.com/1992513/djy/blob/master/gb/1/1/18/n36360.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/1992513/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/1992513/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/1992513/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/1992513/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
